responsive fix on mobile only

--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@
     overflow-x: hidden;
 }
 
-.bg-hero {
-    margin-top: 80px;
+.bg-hero{
+    margin-top: 40px;
 }
+
 
 body {
     background-color: #000;
@@ -27,36 +28,7 @@ body {
     background-position: center;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
-nav ul li {
-    display: inline-block;
-}
-
-nav ul li a {
-    color: #FFFFFF;
-    text-decoration: none;
-    padding-left: 20px;
-    font-weight: 500;
-}
-
-nav ul li a:hover {
-    color: #c2c2c2;
-}
-
-nav h5 {
-    color: #FFFFFF;
-    font-size: 18px;
-    font-weight: 600;
-}
-
-.j-utama {
-    font-size: 18px;
-}
 
 .j-hero {
     color: #FFFFFF;
@@ -98,10 +70,6 @@ nav h5 {
     box-shadow: 2px 2px;
 }
 
-.schedule:not(:last-child) {
-    border-bottom: 0 !important;
-}
-
 .hero-transform {
     transition: 0.2s ease-in-out;
 }
@@ -134,9 +102,11 @@ nav h5 {
 }
 
 .j-sc {
-    padding: 0px 120px 0px 120px;
     font-size: 42px;
     color: #FFFFFF;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 4px;
 }
 
 .garis {
@@ -144,28 +114,10 @@ nav h5 {
 }
 
 .d-sc {
-    padding: 0px 120px 0px 120px;
+    text-align: center;
     font-size: 14px;
     font-weight: 300;
     color: #e3e3e3;
-}
-
-.border {
-    border: 1px #FFFFFF solid;
-    padding: 40px;
-    width: 78%;
-    margin: auto;
-    display: block;
-}
-
-.jb-sc {
-    font-weight: 600;
-    font-size: 36px;
-}
-
-.db-sc {
-    font-weight: 400;
-    font-size: 14px;
 }
 
 .txt-map {
@@ -178,50 +130,18 @@ nav h5 {
 .news {
     font-size: 32px;
     text-align: center;
+    font-weight: 700;
+    letter-spacing: 4px;
 }
 
-.img-news {
-    position: relative;
-    margin: 0 auto;
-    cursor: pointer;
+.card-news{
+    padding: 40px;
 }
-
-.images-news {
-    width: 300px;
-    border-radius: 10px;
-}
-
-.content {
-    position: absolute;
-    bottom: 0;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    backdrop-filter: blur(2px);
-    padding: 20px 20px 0px 20px;
-}
-
-.j-news {
-    font-size: 15px;
+.card-news>h5{
+    font-size: 16px;
     font-weight: 600;
 }
 
-.d-news {
-    font-size: 14px;
-    color: #c2c2c2;
-}
-
-.lr {
-    padding: 0px 120px 0px 120px;
-}
-
-.stamp-news {
-    font-size: 18px;
-}
-
-.tiket {
-    padding: 0px 120px 0px 120px;
-}
 
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/tiket.png");
@@ -234,7 +154,7 @@ nav h5 {
 .hero-text {
     text-align: center;
     color: white;
-    padding: 60px;
+    padding: 40px 30px;
 }
 
 .hero-text button {
@@ -247,6 +167,7 @@ nav h5 {
     text-align: center;
     cursor: pointer;
     font-weight: 500;
+    border-radius: 50px;
 }
 
 .hero-text button:hover {
@@ -287,7 +208,7 @@ nav h5 {
     padding: 15px 28px 15px 28px;
     color: #D9D9D9;
     background-color: #000;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .btn-kritik:hover {
@@ -300,7 +221,7 @@ nav h5 {
     color: #000;
 }
 
-.j-panji {
+.j-panji { 
     color: #363636;
     text-align: right;
     font-weight: 600;
@@ -314,14 +235,22 @@ nav h5 {
     text-align: right;
 }
 
+.email-panji{
+    color: #363636;
+    font-size: 18px;
+}
+.email-panji:hover{
+    color: #6d6d6d;
+}
+
 .bg-penjelasan {
-    margin-top: 200px;
+    margin-top: 180px;
 }
 
 .bg-presale {
     margin-top: 80px;
     background-color: #222;
-    padding: 80px 0px 80px 0px;
+    padding: 50px 0px 50px 0px;
 }
 
 .j-res {
@@ -350,7 +279,7 @@ nav h5 {
     margin: auto;
     background-size: 400% 100%;
     background-position-x: -50%;
-    background-image: linear-gradient(120deg, #FFFFFF 50%, #000 50%);
+    background-image: linear-gradient(120deg, #FFFFFF 50%, #222 50%);
 }
 
 .btn-reservasi>span {
@@ -523,7 +452,7 @@ nav h5 {
     padding-bottom: 56.25%;
     position: relative;
     height: 0;
-    width: 1000px;
+    width: 1120px;
     margin: auto;
 }
 
